name:                SalasUSACHAPI
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/SalasUSACHAPI#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-NT -fno-warn-orphans
  exposed-modules:     Lib
                       DB.Models
                       DB.Types
                       Config
                       API.Types
                       API.API
                       API.Common
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant >= 0.8 && < 0.9
                     , servant-server >= 0.8 && < 0.9
                     , servant-js
                     , servant-docs
                     , wai
                     , warp
                     , mtl >= 2.2 && < 3.0
                     , persistent >= 2.2 && < 3.0
                     , persistent-template
                     , persistent-postgresql
                     , text >= 1.2 && < 1.3
                     , esqueleto >= 2.4 && < 2.5
                     , monad-logger >= 0.3 && < 0.4
                     , transformers >= 0.4 && < 0.5
                     , bytestring >= 0.10 && < 0.11
                     , wai-extra >= 3.0 && < 3.1
                     , directory >= 1.2 && < 1.3
                     , ekg >= 0.4 && < 0.5
  default-language:    Haskell2010

executable SalasUSACHAPI-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-NT -fno-warn-orphans
  build-depends:       base
                     , SalasUSACHAPI
  default-language:    Haskell2010

test-suite SalasUSACHAPI-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , SalasUSACHAPI
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-T -fno-warn-orphans
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/SalasUSACHAPI
